# spellcheck

./: .travis.yml  CMakeLists.txt  README.md  main.c  spell.c  test_main.c
